# gui

./: .clippy.toml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  test.yml
ci/: gitlab-ci.yml
derive/: CHANGELOG.md  Cargo.toml  README.md
derive/src/: lib.rs
derive/tests/: test_derive.rs
derive/tests/common/: mod.rs
src/: event.rs  handleable.rs  lib.rs  mergeable.rs  object.rs  placeholder.rs  renderable.rs  renderer.rs  ui.rs  widget.rs
tests/: test_events.rs  test_message.rs  test_render.rs  test_ui.rs
tests/common/: mod.rs
