[package]
name = "gui"
version = "0.5.0"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://crates.io/crates/gui"
repository = "https://github.com/d-e-s-o/gui.git"
readme = "README.md"
categories = ["gui", "command-line-utilities", "command-line-interface", "rendering"]
keywords = ["gui", "ui"]
description = """
A generic UI library/framework.
"""

[workspace]
members = ["derive"]

[badges]
gitlab = { repository = "d-e-s-o/gui", branch = "master" }

[features]
default = ["derive"]
derive = ["gui-derive"]

[dependencies.gui-derive]
version = "0.5"
optional = true
path = "derive"
