[workspace]
members = [
  ".",
  "derive"
]

[workspace.package]
authors = ["Daniel Mueller <deso@posteo.net>"]
version = "0.6.6"
edition = "2021"
rust-version = "1.64"
license = "GPL-3.0-or-later"
repository = "https://github.com/d-e-s-o/gui.git"

[workspace.lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[workspace.lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
diverging-sub-expression = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-time-subtraction = "warn"
uninlined-format-args = "warn"
wildcard-imports = "warn"

[package]
name = "gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage = "https://github.com/d-e-s-o/gui"
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/gui"
categories = ["gui", "command-line-utilities", "command-line-interface", "rendering"]
keywords = ["gui", "ui"]
description = """
A generic UI library/framework.
"""

[features]
default = ["derive"]
derive = ["gui-derive"]

[dependencies.async-trait]
version = "0.1.41"

[dependencies.gui-derive]
version = "0.6.2"
optional = true
path = "derive"

[dev-dependencies.tokio]
version = "1.0"
default-features = false
features = ["macros", "rt"]

[lints]
workspace = true
