[package]
name = "gui-derive"
version = "0.4.0"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://crates.io/crates/gui-derive"
repository = "https://github.com/d-e-s-o/gui.git"
readme = "README.md"
categories = ["gui", "command-line-utilities", "command-line-interface", "rendering"]
keywords = ["derive", "gui", "ui"]
description = """
Custom derive macros for the gui crate.
"""

[badges]
gitlab = { repository = "d-e-s-o/gui", branch = "devel" }

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"
default-features = false
features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"]

[dev-dependencies.gui]
version = "0.4"
path = ".."
