[package]
name = "gui-derive"
version = "0.6.2"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://crates.io/crates/gui-derive"
repository = "https://github.com/d-e-s-o/gui.git"
readme = "README.md"
categories = ["gui", "command-line-utilities", "command-line-interface", "rendering"]
keywords = ["derive", "gui", "ui"]
description = """
Custom derive macros for the gui crate.
"""

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"
default-features = false
features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"]

[dev-dependencies.async-trait]
version = "0.1.41"

[dev-dependencies.gui]
version = "0.6.2"
path = ".."

[dev-dependencies.tokio]
version = "1.0"
default-features = false
features = ["macros", "rt"]
