[package]
name = "gui-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage = "https://github.com/d-e-s-o/gui/tree/main/derive"
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/gui-derive"
categories = ["gui", "command-line-utilities", "command-line-interface", "rendering"]
keywords = ["derive", "gui", "ui"]
description = """
Custom derive macros for the gui crate.
"""

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false
features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"]

[dev-dependencies.async-trait]
version = "0.1.41"

[dev-dependencies.gui]
version = "0.6.4"
path = ".."

[dev-dependencies.tokio]
version = "1.0"
default-features = false
features = ["macros", "rt"]
